REGRESSION(r260791) Network process fails to suspend promptly https://bugs.webkit.org/show_bug.cgi?id=211207 <rdar://problem/62620454>

Reviewed by Alex Christensen.

Source/WebKit:

After r260791, all WebResourceLoadStatisticsStore instances share a single WorkQueue.
As a result, the logic to suspend WebResourceLoadStatisticsStore's WorkQueues in
NetworkProcess::prepareToSuspend() needs to get updated to reflect this.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::suspend):
(WebKit::WebResourceLoadStatisticsStore::resume):
* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.h:
* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::prepareToSuspend):
(WebKit::NetworkProcess::resume):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ResourceLoadStatistics.mm:
(TEST):


Canonical link: https://commits.webkit.org/224115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260928 268f45cc-cd09-0410-ab3c-d52691b4dbfc